--- a/main.html
+++ b/main.html
@@ -3,13 +3,11 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<h1>Welcome to Accio JObs ! </h1>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<p>All content should be placed inside the body tag. You may refer to the given image for styling (if necessary) but make sure to include the required h1 tag.</p>
 
 </body>
 
