--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-	<h1>Welcome to Accio JObs ! </h1>
+	<h1>Welcome to Accio JObs!</h1>
 </head>
 
 <body>
-	<p>All content should be placed inside the body tag. You may refer to the given image for styling (if necessary) but make sure to include the required h1 tag.</p>
+	All content should be placed inside the body tag. You may refer to the given image for styling (if necessary) but make sure to include the required h1 tag.
 
 </body>
 
